# HM-Mensa

./: Dockerfile  README.md  config.yml  pyproject.toml  readme.md  requirements.txt
.github/workflows/: docker-image.yml  main.yml
HM-Mensa/: dish_model.py  eat_api_parser.py  json_location_model.py  location_model.py  lrz_api_parser.py  main.py  trend_calculator.py  yaml_parser.py
public/: index.html
src/: dish_model.py  eat-api_parser.py  eat_api_parser.py  html_render.py  json_location_model.py  json_location_object.py  location.py  location_model.py  lrzApiParser.py  lrz_Api_Parser.py  lrz_api_parser.py  main.py  menu_Api_model.py  parser.py  trend_calculator.py  wsgi.py  yaml_parser.py
src/public/: index.html
